# action_graph

./: .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  readme.md  requirements.txt
.github/workflows/: cmake-multi-platform.yml  pre-commit.yml  vs-build.yml
cmake/: FindGTest.cmake  FindGoogleTest.cmake  Findyaml-cpp.cmake
configuration/: license_header.txt
src/: CMakeLists.txt
src/action_graph/: CMakeLists.txt  action.cpp  builder.cpp
src/action_graph/builder/: builder.cpp  generic_action_builder.cpp  generic_action_decorator.cpp  parse_duration.cpp
src/action_graph/global_timer/: trigger.cpp
src/action_graph/include/action_graph/: action.h  action_sequence.h  builder.h  decorated_action.h  execution_observer.h  global_timer.h  log.h  log.h.orig  observable_action.h  parallel_actions.h  single_action.h
src/action_graph/include/action_graph/builder/: builder.h  configuration_node.h  generic_action_builder.h  generic_action_decorator.h  parse_duration.h
src/action_graph/include/action_graph/decorators/: decorated_action.h  execution_observer.h  observable_action.h  timing_action.h  timing_monitor.h
src/action_graph/include/action_graph/global_timer/: global_timer.h  trigger.h
src/action_graph/include/action_graph/statistics/: online_distribution_estimator.h
src/examples/: CMakeLists.txt  composite_graph_example.cpp  console_log.cpp  console_log.h  example_action_builder.cpp  example_action_builder.h  example_configurations.h  example_context.cpp  example_context.h  example_runners.h  example_support.cpp  example_support.h  example_timer_runner.cpp  example_timer_runner.h  examples.cpp  examples.h  examples_main.cpp  graph_execution_example.cpp  high_frequency_example.cpp  library_usage_examples.cpp  logging_builder.cpp  logging_builder.h  main.cpp  monitored_graph_example.cpp  monitored_timer_example.cpp  one_second_trigger_example.cpp  single_second_example.cpp  three_actions_ten_milliseconds_example.cpp  timer_helpers.h
src/file_log/: CMakeLists.txt
src/file_log/include/file_log/: file_log.h
src/native_configuration/: CMakeLists.txt
src/native_configuration/include/native_configuration/: map_node.h  scalar_node.h  sequence_node.h
src/yaml_cpp_configuration/: CMakeLists.txt
src/yaml_cpp_configuration/include/yaml_cpp_configuration/: yaml_node.h
src/yaml_cpp_configuration/src/: yaml_node.cpp
tests/: CMakeLists.txt
tests/action_graph/: CMakeLists.txt  action_sequence_performance_test.cpp  action_sequence_test.cpp  action_test.cpp  builder_test.cpp  decorated_action_test.cpp  execution_observer_test.cpp  executor_log.h  global_timer_test.cpp  log_test.cpp  observable_action_test.cpp  parallel_actions_performance_test.cpp  parallel_actions_test.cpp  single_action_test.cpp  test_clock.cpp  test_clock.h  test_clock_test.cpp  test_log.h  test_log.h.orig
tests/action_graph/builder/: builder_test.cpp  callback_action.cpp  callback_action.h  configuration_node_test.cpp  generic_action_builder_test.cpp  generic_action_decorator_test.cpp  parse_duration_test.cpp
tests/action_graph/decorators/: decorated_action_test.cpp  execution_observer_test.cpp  observable_action_test.cpp  timing_action_test.cpp  timing_monitor_test.cpp
tests/action_graph/global_timer/: global_timer_test.cpp  trigger_test.cpp
tests/action_graph/statistics/: online_distribution_estimator_test.cpp
tests/examples/: CMakeLists.txt  examples_test.cpp
tests/file_log/: CMakeLists.txt  file_log_test.cpp  file_log_test.cpp.orig
tests/native_configuration/: CMakeLists.txt  map_node_test.cpp  scalar_node_test.cpp  sequence_node_test.cpp
tests/stress_tests/: CMakeLists.txt  action_sequence_performance_test.cpp  action_sequence_stress_test.cpp  global_timer_timing_monitor_stress_test.cpp  parallel_actions_performance_test.cpp  parallel_actions_stress_test.cpp  single_action_stress_test.cpp
tests/yaml_cpp_configuration/: CMakeLists.txt  node_test.cpp
