# Copyright (c) 2025 Daniel Dube
#
# This file is part of the action_graph library and is licensed under the MIT
# License. See the LICENSE file in the root directory for full license text.

add_subdirectory(action_graph)
add_subdirectory(native_configuration)
add_subdirectory(yaml_cpp_configuration)
add_subdirectory(file_log)
add_subdirectory(stress_tests)
add_subdirectory(examples)
